<resources>
    <string name="app_name">Tasks ManaJinnee</string>

    <string name="common_error_messages_unexpected_server_response">Something went wrong. Try again later</string>
    <string name="common_message_no_data">No data</string>
    <string name="common_label_none">None</string>
    <string name="message_under_construction">Under construction</string>

    <!-- Login Screen -->
    <string name="login_screen_title">Sign In</string>
    <string name="login_screen_hint_email">E-mail</string>
    <string name="login_screen_hint_password">Password</string>
    <string name="login_screen_hint_password_confirm">Password confirm</string>
    <string name="login_screen_label_login_register">Login / Register</string>
    <string name="login_screen_btn_login">Log in</string>
    <string name="login_screen_btn_register">Register</string>
    <string name="login_screen_error_password_not_matches">Password not matches</string>


    <!-- Tasks Screen -->
    <string name="tasks_screen_title">My Tasks</string>
    <string name="tasks_screen_label_due_to">Due to %s</string>
    <string name="tasks_screen_label_high">High</string>
    <string name="tasks_screen_label_medium">Medium</string>
    <string name="tasks_screen_label_low">Low</string>


    <!-- Task Details Screen -->
    <string name="task_details_screen_title">Task Details</string>
    <string name="task_details_screen_label_priority">Priority</string>
    <string name="task_details_screen_label_description">Description</string>
    <string name="task_details_screen_label_notification">Notification</string>
    <string name="task_details_screen_btn_delete">Delete event</string>
    <string name="task_details_screen_message_deleted">Task removed</string>
    <string name="task_details_screen_removal_dialog_title">Delete event</string>
    <string name="task_details_screen_removal_dialog_mesage">The event %s will be removed permanently</string>
    <string name="task_details_screen_removal_dialog_ok">Proceed</string>
    <string name="task_details_screen_removal_dialog_cancel">Cancel</string>

    <!-- Task Create Update Screen -->
    <string name="task_create_update_screen_title_create">Create task</string>
    <string name="task_create_update_screen_title_update">Update task</string>
    <string name="task_create_update_screen_label_title">Title</string>
    <string name="task_create_update_screen_label_due">Due to</string>
    <string name="task_create_update_screen_message_create_succeed">Task has been created successfully</string>
    <string name="task_create_update_screen_message_update_succeed">Task has been updated successfully</string>
    <string name="task_create_update_screen_message_action_failure">Requested action failure</string>
    <string name="task_create_update_screen_message_empty_fields">All values should not be empty</string>
    <string-array name="notification_options_labels">
        <item>None</item>
        <item>15 mins before</item>
        <item>30 mins before</item>
        <item>1 hour before</item>
    </string-array>


    <!-- Reminders Screen -->
    <string name="reminders_screen_title">Reminders</string>
    <string name="reminders_screen_message_reminder_removed">Reminder removed</string>
    <string name="reminders_screen_label_minutes_format">%d mins before start</string>
    <string name="reminders_screen_label_hour">1 hour before start</string>
    <string name="reminders_screen_removal_dialog_title">Delete reminder</string>
    <string name="reminders_screen_removal_dialog_mesage">The reminder will be removed permanently</string>

    <string name="reminder_notification_minutes_body_format">The event will start in %s minutes</string>
    <string name="reminder_notification_hour_body">The event will start in 1 hour</string>

    <string name="sort_value_none">None</string>
    <string name="sort_value_title">Title</string>
    <string name="sort_value_priority">Priority</string>
    <string name="sort_value_date">Date</string>
</resources>
